--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -18,5 +18,8 @@
         <input type="submit" value="login">
         
     </form>
+    {% for message in messages %}
+        <p>{{message}}</p>
+    {% endfor %}
 </body>
 </html>
