--- a/accounts/templates/accounts/password_change.html
+++ b/accounts/templates/accounts/password_change.html
@@ -20,6 +20,9 @@
         <input type="submit" value="change password">
         
     </form>
+    {% for message in messages %}
+        {{message}}
+    {% endfor  %}
     
 </body>
 </html>
